# cosmo

./: .gitattributes  .gitignore  .scalafmt.conf  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Cargo.toml  README.md  Venv.ps1  build.sbt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  venv.sh
.codex/skills/cosmo-release/: SKILL.md
.github/workflows/: ci.yml  gh_pages.yml
assets/files/: .gitignore
cmake/: Cosmo.cmake  CosmoLLVM.cmake  feat-exception.cmake  feat-rtti.cmake  feat-use-lld.cmake
cmd/: CMakeLists.txt
cmd/cosmo/: bootstrap.integration.mjs  main.js  package-run.test.mjs
cmd/cosmoc/: main.cc
crates/: README.md
crates/support-smoke/: Cargo.toml
crates/support-smoke/src/: lib.rs
crates/ureq-sys/: Cargo.toml
crates/ureq-sys/src/: lib.rs
crates/uri-sys/: Cargo.toml
crates/uri-sys/src/: lib.rs
docs/: async.typ  effect.typ  generator.typ  introduction.md  mltt-problem-ladder.typ  mltt-typechecking-guidance.typ
docs/cosmo/: async.typ  book.typ  class.typ  compile-time-evaluation.typ  cosmo0-compile-time-evaluation.typ  cosmo0-macro-expr.typ  cosmo0-spec.typ  derive-macro.typ  ebook.typ  effect.typ  generator.typ  intro.typ  macro-expr.typ  mltt-problem-ladder.typ  mltt-typechecking-guidance.typ  mod.typ  name-resolution.typ  notes.typ  package.typ  runtime.typ  spec.typ  std.typ  syntax-bnf.typ  syntax-corpus-matrix.md  syntax.typ  testing.typ  trait.typ  ufcs.typ
docs/cosmo/notes/: cosmo-macro-expr-computation.md
docs/cosmo0/: class.typ  compile-time-evaluation.typ  control-flow.typ  expr.typ  macro-expr.typ  name-resolution.typ  package.typ  runtime.typ  spec.typ  std.typ  syntax-corpus-matrix.md  testing.typ  type.typ
docs/notes/: cosmo-macro-expr-computation.md
editors/vscode/: .gitignore  .vscodeignore  package.json
editors/vscode/scripts/: copy-cosmos-package.mjs
editors/vscode/src/: cosmos-host.ts  extension.ts  language-service.ts  lsp-server.ts  lsp.ts
editors/vscode/syntaxes/: language-configuration.json
editors/vscode/test/: cosmos-host.test.cjs  extension-output-channel.test.cjs
fixtures/Type/decls/: class.cos-ast  func.cos-ast
fixtures/Type/dispatches/: HelloWorld.cos-ast
fixtures/Type/matches/: HelloWorld.cos-ast  class.cos-ast  json.cos-ast  nat.cos-ast  number.cos-ast  result.cos  string.cos-ast
fixtures/Type/patterns/: HelloWorld.cos  class.cos-ast  class2.cos-ast  nat.cos  nat.cos-ast  result.cos  result.cos-ast
fixtures/cosmo0/parser/: ast_manifest.tsv  manifest.tsv
fixtures/diagnostics/: README.md  manifest.tsv  package_duplicate_declaration.cosdiag  package_missing_import.cos  package_private_import_member.cos  parse_missing_initializer.cosdiag  type_assignment_mismatch.cos  type_branch_mismatch.cos  type_invalid_field.cosdiag  type_invalid_mutability.cos  type_return_mismatch.cosdiag  type_unresolved_name.cos  type_unsupported_map_key.cos  type_wrong_call_arity.cos  unsupported_generic_class.cos  unsupported_lambda.cos
fixtures/name-resolution/negative/: cpp_alias_conflicts_with_cosmo_binding.cos  duplicate_binding.cos  incompatible_cpp_alias.cos  unresolved_name.cos  unsupported_header_only_cpp_import.cos
fixtures/name-resolution/positive/: cpp_namespace_merge.cos  lexical_lookup.cos  qualified_lookup.cos
native/cosmo-clang-sys/: CMakeLists.txt
native/cosmo-clang-sys/src/: cosmo_clang_sys.cc
openspec/changes/add-core0-arena-id/: tasks.md
openspec/changes/add-core0-char-class/: proposal.md  tasks.md
openspec/changes/add-core0-command/: tasks.md
openspec/changes/add-core0-deterministic-map-set/: proposal.md  tasks.md
openspec/changes/add-core0-json-bridge/: tasks.md
openspec/changes/add-core0-lossless-numeric-literals/: design.md  proposal.md  tasks.md
openspec/changes/add-core0-option-result-vec-minimal/: tasks.md
openspec/changes/add-core0-path-fs/: proposal.md  tasks.md
openspec/changes/add-core0-stage-capability-registry/: design.md  proposal.md  tasks.md
openspec/changes/add-core0-text-interfaces/: tasks.md
openspec/changes/add-core0-text-output/: tasks.md
samples/: README.md  cosmo-samples.code-workspace  cosmo.json  manifest.tsv
samples/Arithmetics/: scalars.cos
samples/Class/: basic.cos  jsonValue.cos  method.cos  staticMethod.cos
samples/Classes/: tokens.cos
samples/Collections/: arena_map_set.cos  cpp_vector.cos  option_result_vec.cos
samples/CompileTime/: addFn.cos  arith.cos  local_type_alias.cos  loop.cos  recursive.cos
samples/ControlFlow/: forIn.cos  forInI.cos  loop.cos  mainIf.cos  search.cos
samples/DataProcessing/: data.json  readJson.cos
samples/EffectBad/: exception.cos  exception_base.cos  exception_in_trait_bad_capturing.cos  exception_in_trait_bad_implicit_boxing.cos  exception_in_trait_boxing.cos  exception_in_trait_implicit_boxing.cos
samples/Format/: templateLit.cos
samples/HelloWorld/: main.cos
samples/Io/: readFile.cos
samples/Pattern/: byStr.cos  natAdd.cos  option.cos  result.cos  vecGadt.cos
samples/Patterns/: result_match.cos
samples/PythonTutorial/: a_calc.cos
samples/References/: mutability.cos
samples/Reflect/: name.cos
samples/Syntax/: callExpr.syntax.cos  cf.syntax.cos  class.cos  decl.syntax.cos  expr.syntax.cos  lambda.syntax.cos  literal.cos  literal.syntax.cos  main.cos  matchExpr.syntax.cos  playground.cos  tmplLit.syntax.cos  try-catch.syntax.cos
samples/Text/: scalars.cos
samples/Trait/: display.cos  empty.cos  formatter.cos  formatter_t.cos  iter.cos  resultProblem.cos
samples/TypeAnnotation/: add.cos
samples/Vec/: push.cos
samples/legacy/: cosmo.json
scripts/: build-cosmos-lsp-host.mjs  build.mjs  build.ps1  build.sh  builders.mjs  check-scala-style.sh  draft-release.mjs  e2e.ps1  genExprs.mjs  genLspTypesFromMetamodel.js  generate-changelog.mjs  release-preflight.mjs  testTidy.js  validateCosmo0Docs.js  validateLspTypesGenerator.js  validateSampleWorkspaces.mjs  validateVscodeWorkspaceSample.mjs
syntaxes/textmate/: .gitignore  cosmo.tmLanguage.json  main.mts  package.json
typ/templates/: ebook.typ  page.typ  theme.typ
(+578 files in other folders)
